# h5dsc99

./: README.md  meson.build
include/: meson.build
include/h5ds/: h5_dataspace.h
include/h5dsc99/: h5_bool.h  h5_dataspace.h
src/: h5_bool.c  h5_dataspace.c  meson.build
tests/: meson.build  write.c
